fixing horizontal scrolling on medium devides

--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -19,9 +19,13 @@
 .site-header {
   width: 90%;
 }
+body {
+  overflow: hidden;
+}
 header {
   padding-top: 1.8rem;
   padding-bottom: 1.8rem;
+  padding-left: 30px;
 }
 
 .site-nav {
